--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bulgarhistory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ruslansharipov63.github.io/bulgarhistory",
+  "homepage": "https://ruslansharipov63.github.io/bulgarhistory/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
